tests/custom/STARIS_2022/operation-type-errors/factorial-type-error/stderr.expected
Error:
    factorial-type-error.essence:2:16:
  |
2 | such that b = (false! = false!)
  |                ^^^^^
Type error:
	Expected: int
	Got: bool

factorial-type-error.essence:2:25:
  |
2 | such that b = (false! = false!)
  |                         ^^^^^
Type error:
	Expected: int
	Got: bool

